Fix for new tags not loading after restart

It was missing a connection between KoResourceModel tagBoxEntryModified
event and KoTaggingResourceManager.

BUG:342541